# target-s3-delta

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml  target-s3-delta.sh
target_s3_delta/: __init__.py  common.py  sinks.py  target.py  utils.py
tests/: __init__.py  test_core.py
